# QMedSAM

./: .gitignore  README.md  ddp_dist_tune.py  ddp_training.py  ddp_training_lite.py  evaluate_choose.py  export.py  requirements.txt  validate.py
config/: finaltune_quantize_iemd-2.yaml  tune_litemedsam_ie.yaml  tune_quantize_ie-2.yaml  tune_quantize_iemd-2.yaml
docker_cpp/: CMakeLists.txt  Dockerfile  main.cpp  predict.sh
docker_python/: Dockerfile  predict.sh  validate.py
quantized_segment_anything/: __init__.py  build_medsam.py  build_medsam_lite.py  build_quant_lite.py  build_sam.py
quantized_segment_anything/modeling/: __init__.py  common.py  image_encoder.py  mask_decoder.py  prompt_encoder.py  quant_tiny_vit.py  quant_transformer.py  sam.py  tiny_vit.py  transformer.py
scripts/: dataset_splitter.py  docker.md  eval_to_validation.py  san_check.py
sdk/: SurfaceDice.py  __init__.py  gather_dataset.py  npy_dataset.py  utils.py
